# FHIRTableSaw

./: .gitignore  .tmp_inspect_ndh_endpoint_sd.py  AGENTS.md  DEPENDENCY_MANAGEMENT.md  EVIDENCE_REPORTS.md  FAST_PIPELINE_RESULTS.md  FHIRTableSaw.code-workspace  GO_FAST_ENV_CONFIG.md  IMPLEMENTATION_SUMMARY_RESOURCES.md  MULTI_SOURCE_SETUP.md  NamingConventions.md  OPTIMIZATION_COMPLETE.md  PALANTIR_FIXES.md  PERFORMANCE_OPTIMIZATION.md  QUICKSTART_LOAD_RESOURCES.md  QUICKSTART_SQL_ON_FHIR.md  README.md  README_MULTI_SOURCE.md  README_STAGE_A.md  SlurpReadMe.md  build_reports.sh  check_dependencies.py  create_ndjson_from_api.py  download_cms_ndjson.py  env.example  explore_duckdb.py  export_sql_schema.sh  go.mod  go.py  go.sum  go_cms.py  go_p.py  go_testserver.py  pyproject.toml  requirements.txt  run_local_reporting_server.sh  runner.sh  runner_endpoint.sh  runner_location.sh  runner_organization.sh  (+10 more)
AI_Instructions/: BasicDesign.md  DBTable.md  Endpoint.md  ImproveNeo4JModel.md  InLaw.md  Location.md  MakeNewEvidenceReport.md  Neo4JAnalysis.md  OrganizationAffiliation.md  OrganizationClinical.md  OtherTests.md  PortInLaw.md  PractionerRole.md  Practitioner.md  ReadMe.md  ThreeLayerApproach.md
analysis_neo4j/: .env.example  .gitignore  IMPROVEMENTS_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  QUICKSTART.md  README.md  TypicalQuery.md  docker-compose.yml  requirements.txt
dataexpectations/: IMPLEMENTATION_SUMMARY.md  InlawExample.py  NeededExpectations.md  README.md  __init__.py
docs/: BENCHMARK_GUIDE.md  BENCHMARK_RESULTS.md  DATA_VALIDATION.md  DUCKDB_QUERY_GUIDE.md  (+6 more)
(+251 files in other folders)
